:ambulance: fixed nowrap

--- a/scss/utils/_font.scss
+++ b/scss/utils/_font.scss
@@ -11,6 +11,6 @@
    word-wrap: break-word;
 }
 
-.text-overflow\:wrap {
+.text-overflow\:nowrap {
    white-space: nowrap;
 }
